--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.iutinfo.skeleton</groupId>
-    <artifactId>agile-skeleton</artifactId>
+    <artifactId>neodrone-serveur</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>agile-skeleton</name>
+    <name>neodrone-serveur</name>
     <url>http://maven.apache.org</url>
 
     <build>
