--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,13 +3,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>agile-skeleton</artifactId>
+        <artifactId>neodrone-serveur</artifactId>
         <groupId>fr.iutinfo.skeleton</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>server</artifactId>
+    <artifactId>neodrone-serveur</artifactId>
     <packaging>jar</packaging>
     <build>
         <resources>
