--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.iutinfo.skeleton</groupId>
-    <artifactId>neodrone-serveur</artifactId>
+    <artifactId>agile-skeleton</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>neodrone-serveur</name>
+    <name>agile-skeleton</name>
     <url>http://maven.apache.org</url>
 
     <build>
@@ -27,7 +27,7 @@
         <jetty.version>9.4.2.v20170220</jetty.version>
         <junit.version>4.12</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <logback-classic.version>1.2.3</logback-classic.version>
+        <logback-classic.version>1.1.7</logback-classic.version>
     </properties>
 
     <modules>
