--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.iutinfo.skeleton</groupId>
-    <artifactId>neodrone-serveur</artifactId>
+    <artifactId>agile-skeleton</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>neodrone-serveur</name>
+    <name>agile-skeleton</name>
     <url>http://maven.apache.org</url>
 
     <build>
@@ -22,6 +22,7 @@
             </plugin>
         </plugins>
     </build>
+
     <properties>
         <jersey.version>2.25.1</jersey.version>
         <jetty.version>9.4.2.v20170220</jetty.version>
