--- a/server/pom.xml
+++ b/server/pom.xml
@@ -34,6 +34,7 @@
 					</webApp>
 				</configuration>
 			</plugin>
+			
 			<!-- Build war without web.xml -->
 			<!-- <plugin> <artifactId>maven-war-plugin</artifactId> <version>3.0.0</version> 
 				<configuration> <failOnMissingWebXml>false</failOnMissingWebXml> </configuration> 
@@ -95,5 +96,24 @@
 			<artifactId>common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jaxrs -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>3.5.0.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-multipart-provider -->
+		<dependency>
+		    <groupId>org.jboss.resteasy</groupId>
+		    <artifactId>resteasy-multipart-provider</artifactId>
+		    <version>2.1-beta-1</version>
+		</dependency>
+
 	</dependencies>
 </project>
