--- a/server/pom.xml
+++ b/server/pom.xml
@@ -34,7 +34,7 @@
 					</webApp>
 				</configuration>
 			</plugin>
-			
+
 			<!-- Build war without web.xml -->
 			<!-- <plugin> <artifactId>maven-war-plugin</artifactId> <version>3.0.0</version> 
 				<configuration> <failOnMissingWebXml>false</failOnMissingWebXml> </configuration> 
@@ -110,10 +110,14 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-multipart-provider -->
 		<dependency>
-		    <groupId>org.jboss.resteasy</groupId>
-		    <artifactId>resteasy-multipart-provider</artifactId>
-		    <version>2.1-beta-1</version>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-multipart-provider</artifactId>
+			<version>2.1-beta-1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
 	</dependencies>
 </project>
